Fixed visual issue with the tabbed content while the search is opened - disabled visiblity of the tabs for temp. period, fixed issue, where searched content (players/guilds) were getting created as a new tab.

--- a/src/CSS/HeaderComponent.css
+++ b/src/CSS/HeaderComponent.css
@@ -137,6 +137,14 @@
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
     rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
+
+.header_expand_menu_pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
 .header_expand_menu_search_players ul li,
 .header_expand_menu_search_guilds ul li {
   padding: 0.5rem;
